RESOLVED FIXED255413
Fix assert failure after 262912@main
https://bugs.webkit.org/show_bug.cgi?id=255413
Summary Fix assert failure after 262912@main
Per Arne Vollan
Reported 2023-04-13 13:24:21 PDT
Fix assert failure after 262912@main.
Attachments
Per Arne Vollan
Comment 1 2023-04-13 13:24:31 PDT
Per Arne Vollan
Comment 2 2023-04-13 13:27:50 PDT
Ryan Haddad
Comment 3 2023-04-13 13:31:30 PDT
*** Bug 255411 has been marked as a duplicate of this bug. ***
EWS
Comment 4 2023-04-14 07:14:18 PDT
Committed 262962@main (c22ea9424e63): <https://commits.webkit.org/262962@main> Reviewed commits have been landed. Closing PR #12709 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.