Fix assert failure after 262912@main https://bugs.webkit.org/show_bug.cgi?id=255413 rdar://108009928

Unreviewed assert fix.

Update the expected sandbox extension count in the assert, since 262912@main added one
more extension.

* Source/WebKit/UIProcess/Cocoa/WebProcessProxyCocoa.mm:
(WebKit::WebProcessProxy::unblockAccessibilityServerIfNeeded):

Canonical link: https://commits.webkit.org/262962@main